<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cita_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Fecha de Cita -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cita_date_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cita_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hora de Cita -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/cita_time_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cita_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Número de Cita -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/cita_num_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cita_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|number" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
